[package]
name = "loops-and-adders"
version = "0.1.0"
authors = ["Jeremy Kaplan <jdkaplan@metagram.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need this commit to be able to quit the app programmatically:
# 2fc3977aae16bcb939e7499a2c21cbab2617d4b1
nannou = { git = "https://github.com/nannou-org/nannou" }
